k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-apache-site-service
  labels:
    app: simple-apache-site
spec:
  type: LoadBalancer
  selector:
    app: simple-apache-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
